Updating GVL code as V3 and adding some comments (#32)
* https://github.com/IABTechLab/iabgpp-java/issues/29
https://github.com/IABTechLab/iabgpp-java/issues/26

* Removes duplicate section in the GppModel.decodeSection

* Rename multistate usp* to us*

* fix tcfcav1 policy version

* vendor list 2.2

* lazy decoding

* cleanup lazy decoding

* Updating GVL code as V3 and adding some comments; also removing GPPModel LazyDecoding feature; also keeping the TCF policy version as 2 for Canada.

* 3.1.0

* 3.1.1-SNAPSHOT

---------

Co-authored-by: chad <chad@totalium.com>
Co-authored-by: srini81 <srinivas.bhagavatula@yahooinc.com>